src/test/ui/suggestions/if-let-typo.stderr
error[E0425]: cannot find value `x` in this scope
  --> $DIR/if-let-typo.rs:4:13
   |
LL |     if Some(x) = foo {}
   |             ^ not found in this scope
   |
help: you might have meant to use pattern matching
   |
LL |     if let Some(x) = foo {}
   |        ^^^

error[E0308]: mismatched types
  --> $DIR/if-let-typo.rs:5:8
   |
LL |     if Some(foo) = bar {}
   |        ^^^^^^^^^^^^^^^ expected `bool`, found `()`
   |
help: you might have meant to use pattern matching
   |
LL |     if let Some(foo) = bar {}
   |        ^^^
help: you might have meant to compare for equality
   |
LL |     if Some(foo) == bar {}
   |                  ^^

error[E0308]: mismatched types
  --> $DIR/if-let-typo.rs:6:8
   |
LL |     if 3 = foo {}
   |        ^^^^^^^ expected `bool`, found `()`
   |
help: you might have meant to use pattern matching
   |
LL |     if let 3 = foo {}
   |        ^^^

error[E0308]: mismatched types
  --> $DIR/if-let-typo.rs:7:8
   |
LL |     if Some(3) = foo {}
   |        ^^^^^^^^^^^^^ expected `bool`, found `()`
   |
help: you might have meant to use pattern matching
   |
LL |     if let Some(3) = foo {}
   |        ^^^
help: you might have meant to compare for equality
   |
LL |     if Some(3) == foo {}
   |                ^^

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0308, E0425.
For more information about an error, try `rustc --explain E0308`.
